# kiwi

./: .env.example  .gitignore  .mcp.json  AGENTS.md  BUILD_COMMANDS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  KNOWN_ISSUES.md  LICENSE.md  README.md  SECURITY.md  build  config.example.toml  nest-app.toml  plan.md
crates/kiwi/: Cargo.toml
crates/kiwi/src/: ansi.rs  app.rs  bootstrap.rs  cli.rs  main.rs  repo.rs  shutdown.rs  terminal.rs
crates/kiwi/src/agent/: command.rs  error.rs  id.rs  io.rs  manager.rs  mod.rs  runtime.rs  session.rs  status.rs
crates/kiwi/src/clipboard/: io.rs  keys.rs  mod.rs  paste.rs  target.rs
crates/kiwi/src/commands/: fuzzy.rs  mod.rs  plugin.rs  registry.rs
crates/kiwi/src/config/: loader.rs  mod.rs  types.rs  writer.rs
crates/kiwi/src/diff/: generate.rs  io.rs  mod.rs  types.rs
crates/kiwi/src/editor/: classify.rs  error.rs  launch.rs  mod.rs  target.rs
crates/kiwi/src/file_tree/: classify.rs  ignore.rs  invalidation.rs  io.rs  loader.rs  mod.rs  node.rs  state.rs
crates/kiwi/src/git/: branch_selection.rs  branches.rs  io.rs  mod.rs  panel.rs  patch.rs  repository.rs  selection.rs  status.rs
crates/kiwi/src/github/: actions.rs  auth.rs  browser.rs  context_menu.rs  detail.rs  hub.rs  io.rs  issue.rs  labels.rs  mod.rs  pr.rs  pr_create.rs  pr_detail.rs  pr_merge.rs  selection.rs
crates/kiwi/src/layout/: engine.rs  focus.rs  mod.rs  viewport.rs
crates/kiwi/src/navigation/: keys.rs  mod.rs  state.rs  tabs.rs
crates/kiwi/src/plugins/: discovery.rs  load.rs  mod.rs  registry.rs
crates/kiwi/src/preview/: io.rs  loader.rs  mod.rs  state.rs
crates/kiwi/src/search/: cancel.rs  content.rs  debounce.rs  file.rs  io.rs  mod.rs  state.rs  types.rs
crates/kiwi/src/selection/: extract.rs  hit_test.rs  mod.rs  render.rs  state.rs
crates/kiwi/src/settings/: selection.rs
crates/kiwi/src/shell/: command.rs  error.rs  io.rs  keys.rs  mod.rs  scrollback.rs  session.rs
crates/kiwi/src/state/: app_state.rs  channel.rs  domains.rs  event.rs  mod.rs  preservation.rs  reducer.rs  reducer_tui.rs
crates/kiwi/src/theme/: capabilities.rs  color.rs  loader.rs  mod.rs  roles.rs
crates/kiwi/src/ui/: agent.rs  branches.rs  context_menu.rs  diff.rs  file_tree.rs  git.rs  github.rs  label_picker.rs  logs.rs  milestone_picker.rs  mod.rs  mouse.rs  mouse_clicks.rs  mouse_scroll.rs  notifications.rs  palette.rs  plugins.rs  preview.rs  render.rs  scrollback.rs  scrollbar.rs  search.rs  settings.rs  shell.rs  state.rs  status_bar.rs  tabs.rs
crates/kiwi/src/watcher/: debounce.rs  io.rs  mod.rs  paths.rs
crates/kiwi/src/workspace/: mod.rs  persistence.rs  snapshot.rs
crates/kiwi_core/: Cargo.toml
crates/kiwi_core/src/: ansi.rs  env.rs  lib.rs  status_bar.rs  util.rs
crates/kiwi_core/src/agent/: api_client.rs  chat.rs  command.rs  id.rs  io.rs  manager.rs  memory_client.rs  mod.rs  session.rs  status.rs  stream_event.rs  tool_executor.rs  tools.rs
crates/kiwi_core/src/clipboard/: mod.rs
crates/kiwi_core/src/commands/: fuzzy.rs  mod.rs  registry.rs
crates/kiwi_core/src/config/: error.rs  loader.rs  mod.rs  types.rs  writer.rs
crates/kiwi_core/src/diff/: generate.rs  io.rs  mod.rs
crates/kiwi_core/src/editor/: launch.rs  mod.rs  resolve.rs  target.rs
crates/kiwi_core/src/events/: channel.rs  mod.rs
crates/kiwi_core/src/file_tree/: classify.rs  io.rs  loader.rs  mod.rs  state.rs  symlink.rs
crates/kiwi_core/src/git/: branch_ops.rs  branch_selection.rs  branches.rs  io.rs  mod.rs  panel.rs  patch.rs  repository.rs  selection.rs  status.rs
crates/kiwi_core/src/github/: actions.rs  agent_prompts.rs  auth.rs  browser.rs  command.rs  context_menu.rs  create_issue.rs  create_pr.rs  detail.rs  io.rs  issue.rs  labels.rs  milestones.rs  mod.rs  open_browser.rs  pr.rs  pr_create.rs  pr_detail.rs  pr_merge.rs  repo_labels.rs  repo_milestones.rs  selection.rs  types.rs
crates/kiwi_core/src/navigation/: focus.rs  mod.rs  state.rs  tabs.rs
crates/kiwi_core/src/plugins/: install.rs  mod.rs  registry.rs
crates/kiwi_core/src/preview/: io.rs  loader.rs  mod.rs  state.rs
crates/kiwi_core/src/reducer/: agent.rs  diff.rs  git.rs  github.rs  mod.rs  navigation.rs  plugins.rs  search.rs  settings.rs  shell.rs  workspace.rs
crates/kiwi_core/src/search/: content.rs  file.rs  io.rs  mod.rs  state.rs
crates/kiwi_gui/: Cargo.toml
crates/kiwi_gui/src/: app.rs  bootstrap.rs  cli.rs  main.rs  navigation_bridge.rs  runtime.rs  services.rs
crates/kiwi_plugin_api/: Cargo.toml  README.md
crates/kiwi_plugin_api/src/: api.rs  lib.rs  manifest.rs  version.rs
crates/kiwi_plugin_loader/: Cargo.toml
crates/kiwi_plugin_loader/src/: decode.rs  error.rs  host.rs  lib.rs
desktop/: Cargo.toml  build  config.example.toml  config.toml  mcp.json.example  recent-projects.toml
desktop/.cargo/: config.toml
desktop/crates/kiwi/: Cargo.toml
desktop/logs/: kiwi
desktop/themes/: cursor-dark.toml
plugins/kiwi_mcp_context/: Cargo.toml  plugin.toml
plugins/kiwi_mcp_context/src/: db.rs  embed.rs  env.rs  lib.rs  main.rs  mcp.rs
plugins/kiwi_mcp_git/: Cargo.toml  plugin.toml
plugins/kiwi_mcp_git/src/: git.rs  github.rs  lib.rs  main.rs  mcp.rs
plugins/kiwi_mcp_gitnexus/: Cargo.toml  plugin.toml
plugins/kiwi_mcp_gitnexus/src/: gitea.rs  lib.rs  main.rs  mcp.rs
plugins/kiwi_mcp_memory/: Cargo.toml  plugin.toml
plugins/kiwi_mcp_memory/src/: db.rs  embed.rs  indexer.rs  kb_config.rs  lib.rs  main.rs  mcp.rs
plugins/kiwi_plugin_hello/: Cargo.toml  README.md  plugin.toml
plugins/kiwi_plugin_hello/src/: lib.rs
plugins/kiwi_plugin_ollama/: Cargo.toml  plugin.toml
plugins/kiwi_plugin_ollama/src/: context.rs  env_config.rs  lib.rs  main.rs  mcp_client.rs  ollama.rs  ollama_cli.rs  rag.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: accounts.rs  agent.rs  agent_config.rs  commands.rs  config_host.rs  doc_sources.rs  docs.rs  git.rs  github.rs  kiwi_config.rs  main.rs  mcp.rs  new_app.rs  ollama.rs  problems.rs  swift.rs  terminal.rs  workspace.rs
(+513 files in other folders)
