[workspace]
resolver = "2"
members = ["crates/kiwi"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Pacific NM"]
license = "MIT"
repository = "https://github.com/pacificnm/kiwi"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"

[workspace.dependencies]
anyhow = "1"
crossterm = "0.28"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
