[workspace]
resolver = "2"
members = [
    "crates/kiwi",
    "crates/kiwi_core",
    "crates/kiwi_gui",
    "crates/kiwi_plugin_api",
    "crates/kiwi_plugin_loader",
    "plugins/kiwi_plugin_hello",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Pacific NM"]
license = "MIT"
repository = "https://github.com/pacificnm/kiwi"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"

[workspace.dependencies]
anyhow = "1"
crossterm = "0.28"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
portable-pty = "0.8"
signal-hook = "0.3"
notify = "7.0.0"
arboard = "3.4"
git2 = "0.19"
libloading = "0.8"
kiwi_core = { path = "crates/kiwi_core" }
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "persistence", "wayland", "x11"] }
egui_dock = "0.16"
