[workspace]
resolver = "2"
members = [
    "crates/kiwi",
    "crates/kiwi_core",
    "crates/kiwi_gui",
    "crates/egui_dock",
    "crates/kiwi_plugin_api",
    "crates/kiwi_plugin_loader",
    "plugins/kiwi_plugin_hello",
    "plugins/kiwi_plugin_ollama",
    "plugins/kiwi_mcp_memory",
    "plugins/kiwi_mcp_context",
    "plugins/kiwi_mcp_git",
    "plugins/kiwi_mcp_gitnexus",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Pacific NM"]
license = "MIT"
repository = "https://github.com/pacificnm/kiwi"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"

[workspace.dependencies]
anyhow = "1"
crossterm = "0.28"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
portable-pty = "0.8"
signal-hook = "0.3"
notify = "7.0.0"
arboard = "3.4"
git2 = "0.19"
libloading = "0.8"
kiwi_core = { path = "crates/kiwi_core" }
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "persistence", "wayland", "x11"] }
egui_dock = { path = "crates/egui_dock", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
ureq = { version = "2", features = ["json"] }
walkdir = "2"
postgres = "0.19"
pgvector = { version = "0.4", features = ["postgres"] }
sha2 = "0.10"
