[package]
name = "kiwi"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Terminal-native AI development workspace"

[[bin]]
name = "kiwi"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
portable-pty.workspace = true
signal-hook.workspace = true
