[package]
name = "kiwi_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared domain types and services for Kiwi frontends"

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
toml.workspace = true

[dev-dependencies]
clap.workspace = true
