[package]
name = "kiwi_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared domain types and services for Kiwi frontends"

[lints]
workspace = true

[dependencies]
kiwi_plugin_api = { path = "../kiwi_plugin_api" }
kiwi_plugin_loader = { path = "../kiwi_plugin_loader" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
git2.workspace = true
notify.workspace = true
portable-pty.workspace = true

[dev-dependencies]
clap.workspace = true
