[package]
name = "kiwi_plugin_loader"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Dynamic library loader for Kiwi plugins"

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = "warn"

[dependencies]
kiwi_plugin_api = { path = "../kiwi_plugin_api" }
libloading.workspace = true
