[package]
name = "kiwi_mcp_context"
description = "MCP server for Kiwi agent session context memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "kiwi_mcp_context"
crate-type = ["cdylib"]

[[bin]]
name = "kiwi-mcp-context"
path = "src/main.rs"

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = "warn"

[dependencies]
kiwi_plugin_api = { path = "../../crates/kiwi_plugin_api" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
ureq.workspace = true
postgres.workspace = true
pgvector.workspace = true
toml.workspace = true
