[package]
name = "kiwi_mcp_memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for Kiwi project memory search (Rust port of mcp_memory_server.py)"

[lib]
name = "kiwi_mcp_memory"
crate-type = ["cdylib"]

[[bin]]
name = "kiwi-mcp-memory"
path = "src/main.rs"

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = "warn"

[dependencies]
kiwi_plugin_api = { path = "../../crates/kiwi_plugin_api" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
ureq.workspace = true
walkdir.workspace = true
postgres.workspace = true
pgvector.workspace = true
sha2.workspace = true
toml.workspace = true
