[package]
name = "kiwi_plugin_hello"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sample Kiwi plugin registering a hello palette command"

[lib]
crate-type = ["cdylib"]

[dependencies]
kiwi_plugin_api = { path = "../../crates/kiwi_plugin_api" }

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = "warn"
