[package]
name = "kiwi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Kiwi IDE — AI-native Rust workspace (CLI)"

[[bin]]
name = "kiwi"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
nest-agent = { workspace = true }
nest-ai = { workspace = true, features = ["async"] }
nest-ai-ollama = { workspace = true }
nest-cli = { workspace = true, features = ["async"] }
nest-config = { workspace = true }
nest-core = { workspace = true }
nest-error = { workspace = true }
nest-file = { workspace = true }
nest-http = { workspace = true }
nest-http-client = { workspace = true }
nest-logging = { workspace = true }
nest-mcp = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
toml = "0.8"
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
